governance-shared/baselines/3.16.0/ChronoPM-Project/references/11-output-artifact-rules.md
# 输出物生成与管理规则

本规则管理 AI 生成的对外文件（周报、时间线报/自然月特例、会议纪要、Excel、Word、PDF 等），明确生成物与事实源的边界。

---

## 1. 输出物定义

| 类型 | 说明 | 就是/并不是 |
|---|---|---|
| 输出物（Artifact） | AI 为用户生成的外部文件 | 是：报表、汇报材料、导出的文件 |
| 事实源（Source of Truth） | `ai/` 目录下的管理记录 | 不是：输出物；输出物需确认后才归档为事实源 |

## 2. 输出物分类

| 分类 | 示例 | 生命周期 |
|---|---|---|
| 文档类 | 周报、时间线报（含自然月）、会议纪要、评审纪要、需求文档 | 草稿 → 确认 → 导出/归档 |
| 数据类 | Excel、CSV、预算表 | 草稿 → 确认 → 导出 |
| 演示类 | PPT、汇报材料 | 草稿 → 确认 → 导出 |

## 3. 批次目录结构

每个生成请求在 `ai/outputs/` 下创建独立批次目录（v2.1.0 起 outputs/ 移入 `ai/` 内，工作区根目录不再有 outputs/）：

```
ai/outputs/{YYYYMMDDHHMMSS}/
├── draft.md          # 草稿
├── final.md          # 用户确认后的最终版
├── manifest.md       # 来源追溯清单
├── revisions/        # 修改记录
│   └── rev-NNN.md
└── files/            # 导出文件
```

**命名示例：** `ai/outputs/20260809165540/draft.md`、`project-deletion/draft.md`（可加序号后缀 `-NNN` 区分同批次多个输出物）。

## 4. 触发表达

**类（优先）**：凡本轮要落盘给用户看的非事实源文件（xlsx/docx/pdf/csv/整理成果/导出表）= 生成物，必须进 `ai/outputs/{timestamp}/`。不靠撞上「帮我生成周报」。

宿主 `final workspace folder` / cwd / workspace root 若等于项目根（`ai/` 的父目录），**忽略**，改映射到本批次目录。禁止写到与 `ai/` 平级。

| 触发词（举例，非穷尽） | 说明 |
|---|---|
| 帮我生成周报 / 生成周报 / 导出周报 | 周报生成 |
| 生成月报 / 生成日报 / 生成时间线报 | 项目日报或时间线报（月报=自然月特例，不写 reports/monthly/） |
| 生成会议纪要 / 整理成会议纪要 | 会议纪要生成 |
| 生成需求评审纪要 / 生成设计评审纪要 | 评审纪要生成 |
| 生成Excel / 生成Word / 生成PDF | 指定格式生成 |
| 导出Excel / 导出文件 / 导出报表 | 文件导出 |
| 做一份汇报材料 / 出个表 / 出个报告 / 整理工时成表 | 汇报材料或统计表 |
| 整理成文件 | 通用文件生成 |

---

## 5. 生成流程

### 5.1 默认流程

1. 读取 `project-brief.md` 和相关事实源
2. 创建输出批次目录 `ai/outputs/{timestamp}/`
3. 生成 Markdown 草稿 → `draft.md`
4. 等待用户确认
5. 用户确认后 → `final.md`
6. 导出为指定文件格式 → `files/`
7. 询问是否归档到 `ai/` 事实源

**默认不得在用户未确认前生成正式版本文件。**  
**例外 `skill_gap`**：一次写成 `{批次}/需求-{短标题}.md` 作主文件，跳过 3–5 与第 7 步；先写后告知路径。**不建 `manifest.md`**；来源写在该需求文件 front matter 的 `source_files`。其它 Type 仍按 §3 建 manifest。

### 5.2 格式确认规则

当用户只说"生成周报""生成报告"等描述性请求时，AI 应询问输出方式：①先生成 Markdown 草稿，确认后导出（推荐）；②直接生成 Markdown；③/④/⑤生成 Excel / Word / PDF；⑥同时生成多种格式。若用户明确指定格式，则无需询问，但仍应在导出前确认。

### 5.3 多轮修改规则

同一次生成请求的多轮修改**必须复用同一个批次目录**。例如"帮我生成周报"创建 `ai/outputs/20260809165540/`，后续"压缩风险部分""调整结构"等修改均写入 `ai/outputs/20260809165540/revisions/rev-NNN.md`。**不得为普通修改创建新的时间戳批次目录**；仅当用户明确说"重新生成"或"另出一版"时才新建批次目录。

### 5.4 修改时的文件处理

- 修改草稿阶段：只更新 `draft.md` + 追加 `revisions/rev-NNN.md`，不重新生成 `files/` 下文件。
- 用户确认后：写入 `final.md`，再生成/覆盖 `files/` 下文件。

---

## 6. 输出状态

| 状态 | 说明 |
|---|---|
| `初稿` | 已生成初稿 |
| `待确认` | 等待用户确认 |
| `修改中` | 用户正在修改 |
| `已定稿` | 内容已确认 |
| `已导出` | 已导出文件 |
| `已归档` | 已归档到 ai/ 事实源 |
| `已取消` | 用户取消 |

---

## 7. 生成物索引

`ai/outputs/index.md` 记录所有生成批次：

| Batch ID | Created At | Request | Type | Status | Main File | Related AI File |
|---|---|---|---|---|---|---|
| 20260809165540 | 2026-08-09 16:55:40 | 帮我生成周报 | weekly_report | draft | ai/outputs/20260809165540/draft.md | pending |

`Type=skill_gap`：主文件必须是 `{批次}/需求-{短标题}.md`，**不走** draft.md→final.md，**不建 manifest.md**。登记后禁止问是否归档进事实源。7 日同痛点可在需求文件 front matter `revisions` 追加，或按用户要求另开批次。编号 `SG-YYYYMMDD-NNN` 取当日本 Type 最大号 +1。

每次创建、修改、导出或归档输出物时，必须同步更新 `ai/outputs/index.md`。

---

## 8. 来源追溯

除 `Type=skill_gap` 外，所有生成物必须在 `manifest.md` 中记录来源文件（如本项目周报来自本项目日报/待办/风险/问题等）。skill_gap 的来源写在需求文件 YAML `source_files`。跨项目汇总周报请到 ChronoPM-Portfolio 对话生成，本包不以其为归档目标。**不得生成无来源记录的正式文件。**

---

## 9. 事实源边界

| 目录 | 存什么 | 性质 |
|---|---|---|
| `ai/` | 事实源、规则、模板、项目管理记录 | 事实源（需确认更新） |
| `ai/outputs/` | 生成的文档、Excel、Word、PDF、草稿、导出结果 | 生成物（草稿可自由迭代） |
| 业务子项目目录 | 业务代码、原始业务资料、交付物 | 业务文件（不侵入） |

> v2.1.0 起 `outputs/` 位于 `ai/` 目录内（`ai/outputs/`），但其性质仍是生成物而非事实源：生成物不得作为任何查询/聚合的数据源。

**生成报告 ≠ 更新事实源。** 默认先生成 `ai/outputs/` 草稿，用户确认后再询问是否归档到 `ai/` 事实源目录。**例外**：`Type=skill_gap` 禁止询问归档进事实源，永不写入 requirements/wps/plans。

---

## 10. 归档规则

| 内容类型 | 归档路径 |
|---|---|
| 本项目周报 | `reports/weekly/{year}/` |
| 集周报 / 跨项目周报 | 集周报请到 ChronoPM-Portfolio 对话（本包不归档到 `portfolio/reports/`） |
| 本项目会议纪要 | `meetings/{year}/` |
| 跨项目会议纪要 | 本项目相关部分归档到 `meetings/{year}/`；跨项目汇总请到 ChronoPM-Portfolio |
| 需求评审纪要 | `meetings/{year}/` 或 `reviews/` |
| 设计评审纪要 | `reviews/` |
| P&L 导出 | `ai/outputs/`（必要时更新本项目 `project-info/budget.md`） |

归档时必须询问用户确认，给出目标路径（如 `reports/weekly/2026/2026-W33-项目周报.md`）。

---

## 11. 确认规则

生成物确认同属对外确认场景，话术见 `00-pm-main-rules.md` **对外确认专节**（本文件不复述）：禁止对用户甩内部路径/编号/工序名；「请你确认」只=认不认或准不准。

| 操作 | 是否需要确认 |
|---|---|
| 创建输出批次目录 | 不需要 |
| 生成 Markdown 草稿 | 不需要 |
| 多轮修改草稿 | 不需要 |
| 导出 Excel/Word/PDF | 需要确认（除非用户明确指定格式） |
| 归档到 ai/ 事实源 | 必须确认 |
| 覆盖已有输出文件 | 必须确认 |
| 删除或取消输出批次 | 必须确认 |
| 修改 final.md | 不允许（应创建新批次） |

---

## 12. 未确认处理

用户长期未确认时，输出批次保持 `待确认` 状态，不自动删除。AI 可在后续查询中提示存在未确认批次（列出 Batch ID/类型/创建时间/状态）并询问"是否继续处理或取消？"。

---

## 13. 文件命名规则

### 13.1 输出批次目录

`ai/outputs/{YYYYMMDDHHMMSS}/`；需区分序号时用 `ai/outputs/{YYYYMMDDHHMMSS}-NNN/`。

### 13.2 导出文件命名

格式：`{scope}-{document_type}-{period_or_date}-{version}.{ext}`

| 字段 | 说明 | 示例 |
|---|---|---|
| scope | 本项目名称 | 如：全链通重构 |
| document_type | 文档类型 | 周报 / 时间线报 / 需求评审纪要 |
| period_or_date | 周期或日期 | 2026-W33 / 20260809 |
| version | 版本号 | v0.1 / v1.0 |

### 13.3 版本规则

| 版本 | 含义 |
|---|---|
| `v0.1` | 初稿 |
| `v0.2` | 修改稿 |
| `v1.0` | 用户确认版 |
| `v1.1` | 确认后小修 |

---

## 14. 环境兼容规则

若当前环境不具备文件写入或 Excel/Word/PDF 生成能力，AI 应：①不假装已生成文件；②输出目标路径、文件名和文件内容；③提供替代方案（CSV 内容、Python openpyxl 脚本、Excel 表结构定义、可复制到 Excel 的 Markdown 表格）。

---

## 15. 与 10-update-trigger-rules 的关系

| 规则 | 负责什么 |
|---|---|
| `10-update-trigger-rules.md` | 识别"要不要更新事实源"（→ `ai/`） |
| `11-output-artifact-rules.md` | 识别"要不要生成外部文件/导出物"（→ `ai/outputs/`） |

**示例：** "记录一下，陈佳菁被抽调" → 触发 `10`（更新事实源）；"帮我生成周报" → 触发 `11`（生成输出物）；"帮我生成本周项目集周报，并归档" → 提示到 ChronoPM-Portfolio 对话（本包只生成本项目周报）。

## 16. 存储生命周期

`ai/outputs/` 目录瘦身：
- 触发：`ai/outputs/index.md` >100 行 或 目录 >50 个批次
- 动作：将 >90 天且状态为 `已定稿`/`已导出` 的批次移动到 `ai/outputs/archive/YYYY/`
- 状态为 `待确认` 的批次不自动归档（保留现有规则）
- 归档后更新 `ai/outputs/index.md`：归档条目标记为 `[已归档→路径]`

`ai/outputs/index.md` 自身瘦身：
- >200 行时，将 >180 天的已归档条目移至 `ai/outputs/archive/index-archive.md`

---

## 17. Index 派生 Mermaid 图（v3.16.0）

### 17.1 定位

派生视图，非事实源。由 `wps/_index.md` + 必要时 `todos/{date}/_index.md` + PLAN §3 实时聚合。**仅对话输出**（Markdown 里的 Mermaid 代码块）。

**硬禁**：禁止写成任何文件（含 `ai/outputs/`）。不走 P-OUTPUT，不建批次，不登记 `outputs/index`。

### 17.2 可派生图类型

| 图类型 | 数据源 | Mermaid 类型 | 说明 |
|---|---|---|---|
| 计划→WP 结构图 | PLAN §3 + wps/_index | graph TD | 计划→WP 概览 |
| 人员×待办排布图 | todos/_index §1 + §3 | graph LR | 人员→WP→待办分布 |
| WP 责任链图 | wps/_index 上游/下游列（或 YAML related_wps） | graph LR | 字段空则跳过该子图，不编造边 |

### 17.3 触发

用户显式请求（「画图 / 排布图 / 责任链图 / Mermaid」）。不自动触发。生成时读最新 index，不缓存。

路由：SKILL.md「画图」行必须加载 **05+11**；05 命中后按本节输出。不改 23 号（纯查询不载 23）。
